# vaultedb

./: .gitignore  MANIFEST.in  README.md  README.md   pyproject.toml  requirements.txt
demo/: demo_notebook.ipynb  example_usage.py
docs/: storage.md
docs/encrypted_storage/: encrypted_storage.md  encrypted_storage_user_doc.md
docs/storage/: storage.md  storage_user_doc.md
tests/: test_audit_log.py  test_cli_inspect.py  test_crypto.py  test_encrypted_logging_integration.py  test_encrypted_storage.py  test_encrypted_storage_find.py  test_encrypted_storage_passphrase.py  test_key_export.py  test_storage.py
tests/docs/: test_encrypted_storage.md  test_encrypted_storage_find.md  test_storage.md
vaultdb/: __init__.py  cli.py  config.py  crypto.py  encrypted_storage.py  errors.py  logging.py  storage.py
